--- a/python_code/dataAnalysis/footbook.ipynb
+++ b/python_code/dataAnalysis/footbook.ipynb
@@ -1866,6 +1866,66 @@
    "id": "0be68a4a",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "faa4e57e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import XQY_Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6a2cbbb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999560068323006"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XQY_Utils.physics_function.PhysicsFunction.calculate_beta(100, 0.938)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2fe6f3b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999418284942"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XQY_Utils.physics_function.PhysicsFunction.calculate_beta(2750, 0.938)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7809717f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
