--- a/python_code/dataAnalysis/夏秋雨 2024112200 第一次作业.ipynb
+++ b/python_code/dataAnalysis/夏秋雨 2024112200 第一次作业.ipynb
@@ -470,7 +470,39 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ced9752dcdf5d366"
+   "id": "5db70569f28e4e6d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-12T10:46:06.567751Z",
+     "start_time": "2025-03-12T10:46:06.555371Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "ced9752dcdf5d366",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000000"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3520c54b18cdc3df"
   }
  ],
  "metadata": {
