--- a/python_code/dataAnalysis/footbook.ipynb
+++ b/python_code/dataAnalysis/footbook.ipynb
@@ -2271,14 +2271,11 @@
   },
   {
    "metadata": {},
-
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
    "id": "a478596e5d119c31"
-
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2510,12 +2507,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "d79d4c8a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T07:37:48.854787Z",
+     "start_time": "2025-03-17T07:37:48.757102Z"
+    }
+   },
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([1, 2, 3])"
+   ],
    "outputs": [],
-   "source": []
-
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T07:38:02.717169Z",
+     "start_time": "2025-03-17T07:38:02.712557Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "b = np.array(a)",
+   "id": "531029cc0b1dd608",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T07:38:04.231803Z",
+     "start_time": "2025-03-17T07:38:04.226035Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "b",
+   "id": "610004f1a06e5212",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T07:40:29.340118Z",
+     "start_time": "2025-03-17T07:40:29.334083Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(b)",
+   "id": "dfb18b9756c7d7c5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T07:41:24.871563Z",
+     "start_time": "2025-03-17T07:41:24.859192Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "a = 5",
+   "id": "7c49ea6b549cfc47",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-17T07:41:56.363963Z",
+     "start_time": "2025-03-17T07:41:56.358034Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "isinstance(a, int)",
+   "id": "f3f9fe0ff6742733",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "5ca559a698328edd"
   }
  ],
  "metadata": {
