--- a/python_code/dataAnalysis/calculate_BB_eq.ipynb
+++ b/python_code/dataAnalysis/calculate_BB_eq.ipynb
@@ -27,11 +27,11 @@
    "source": [
     "Ar_A = 40\n",
     "Ar_Z = 18\n",
-    "Ar_rho = 1.4\n",
+    "Ar_rho = 1.782e-3\n",
     "\n",
     "CH4_A = 16\n",
     "CH4_Z = 10\n",
-    "CH4_rho = 0.423"
+    "CH4_rho = 7.17e-4"
    ]
   },
   {
@@ -77,7 +77,7 @@
      "output_type": "stream",
      "text": [
       "dedx =  1.6090465869688064\n",
-      "delta_e =  2.2526652217563288\n"
+      "delta_e =  0.002867321017978413\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "dedx =  2.3383013187699806\n",
-      "delta_e =  0.9891014578397017\n"
+      "delta_e =  0.0016765620455580761\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
      "output_type": "stream",
      "text": [
       "dedx =  1.559091553555413\n",
-      "delta_e =  2.182728174977578\n"
+      "delta_e =  0.002778301148435746\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
      "output_type": "stream",
      "text": [
       "dedx =  2.2916875305520503\n",
-      "delta_e =  0.9693838254235173\n"
+      "delta_e =  0.00164313995940582\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "dedx =  2.094167049686377\n",
-      "delta_e =  2.9318338695609274\n"
+      "delta_e =  0.0037318056825411234\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
      "output_type": "stream",
      "text": [
       "dedx =  3.099489911292713\n",
-      "delta_e =  1.3110842324768175\n"
+      "delta_e =  0.0022223342663968753\n"
      ]
     }
    ],
