finish code (appendix)

--- a/python_code/bigHomeWork/main.ipynb
+++ b/python_code/bigHomeWork/main.ipynb
@@ -71,9 +71,16 @@
    "cell_type": "markdown",
    "source": [
     "# 使用SAC模型\n",
-    "# 该模型可以处理连续动作空间"
+    "# 该模型可以处理连续动作空间\n",
+    "# 详情见README"
    ],
    "id": "8b8dd9b5bc302249"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 设置训练id以及初始化模型",
+   "id": "6af7d503d93b6def"
   },
   {
    "metadata": {
@@ -107,6 +114,12 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 使用Tensorboard来记录运行的奖励曲线随迭代次数的变化",
+   "id": "4a609b7705124b88"
   },
   {
    "metadata": {
@@ -762,6 +775,12 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 保存模型，以及模型参数",
+   "id": "e34f756970c3c821"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-27T09:40:48.320342Z",
@@ -806,6 +825,16 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 可视化无人机飞行路径\n",
+    "# 粉色为无人机飞行路径\n",
+    "# 蓝色为目标点"
+   ],
+   "id": "f4d6692941c1fbb"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "load_model = SAC.load(\"models/\"+run_id+\"/SAC.model\")\n",
@@ -832,12 +861,14 @@
     "    ax.set_xlim([-5, 5])\n",
     "    ax.set_ylim([-5, 5])\n",
     "    ax.set_zlim([20, 0])  \n",
+    "    # 这里的坐标系中，z轴指向地心\n",
+    "    # 这是航空专业喜欢用的坐标系，这里顺从这一规定\n",
     "    \n",
     "    ax.set_xlabel('X')\n",
     "    ax.set_ylabel('Y')\n",
     "    ax.set_zlabel('Z (Down)')  # 明确标注Z轴朝下\n",
     "    \n",
-    "    ax.view_init(elev=20, azim=-120)  # 调整视角\n",
+    "    ax.view_init(elev=20, azim=-120) \n",
     "    \n",
     "    xx, yy = np.meshgrid(np.linspace(-1, 1, 10), np.linspace(-1, 1, 10))\n",
     "    zz = np.zeros_like(xx)\n",
