--- a/python_code/bigHomeWork/main.ipynb
+++ b/python_code/bigHomeWork/main.ipynb
@@ -3,11 +3,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "# 夏秋雨\n",
-    "## 2024112200\n",
-    "# 无人机仿真"
-   ],
+   "source": "",
    "id": "ea18a352b7f62dbb"
   },
   {
@@ -15,10 +11,21 @@
    "cell_type": "markdown",
    "source": [
     "# 请务必阅读README，大部分公式和讲解都在README之中\n",
-    "# 请务必阅读README，大部分公式和讲解都在README之中\n",
-    "# 请务必阅读README，大部分公式和讲解都在README之中"
+    "# 虽然这个ipynb叫main，但是*大部分代码*都不在这里，请去看*src*文件夹"
    ],
    "id": "50faf291242e252"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 如果想自己训练一次模型，步骤如下\n",
+    "# 1. 更改配置文件（simulator_config）\n",
+    "# 2. pip install /path/to/the/pyproject.toml\n",
+    "# 3. 修改run_id参数（在4号单元格）\n",
+    "# 4. 刷新notebook"
+   ],
+   "id": "c071418e7ce4e0fb"
   },
   {
    "cell_type": "code",
